# server/libs/automation/automation-configuration/automation-configuration-rest/automation-configuration-rest-impl/openapi.yaml
@@ -1213,6 +1213,8 @@ components:
   schemas:
     Category:
       $ref: "../../../../platform/platform-category/platform-category-rest/openapi.yaml#/components/schemas/Category"
+    ComponentInputReference:
+      $ref: "../../../../platform/platform-configuration/platform-configuration-rest/platform-configuration-rest-impl/openapi.yaml#/components/schemas/ComponentInputReference"
     Connection:
       description: "Contains all required information to open a connection to a service\
         \ defined by componentName parameter."
@@ -1608,6 +1610,8 @@ components:
               description: "The workflow uuid"
               type: "string"
               readOnly: true
+    WorkflowInput:
+      $ref: "../../../../platform/platform-configuration/platform-configuration-rest/platform-configuration-rest-impl/openapi.yaml#/components/schemas/WorkflowInput"
     Workspace:
       description: "A workspace."
       required:
